# rust-media

./: .gitignore  Cargo.toml  README.md  audiodecoder.rs  audioformat.rs  build.rs  container.rs  decoder.rs  example.rs  lib.rs  makefile.cargo  mkvparser.cpp  mkvparser.rs  mp4.rs  openh264.rs  pixelformat.rs  playback.rs  streaming.rs  timing.rs  utils.rs  videodecoder.rs  vpxdecoder.rs
codecs/: aac.rs  h264.rs  libavcodec.rs  vorbis.rs  vpx.rs
containers/: gif.rs  mkv.rs  mp4.rs  ogg.rs
example/: Cargo.toml  example.rs
platform/macos/: audiounit.rs  coreaudio.rs  coremedia.rs  corevideo.rs  videotoolbox.rs
tests/: reftest.rs  vorbis.rs
tests/gif/1bit-255-trans/: output00000.tga
tests/gif/423tribalChallenge/: output00000.tga  output00001.tga  output00002.tga  output00003.tga  output00004.tga  output00005.tga  output00006.tga  output00007.tga  output00008.tga
tests/gif/animation1a/: output00000.tga  output00001.tga
tests/gif/animation2a/: output00000.tga  output00001.tga
tests/gif/animation2a-finalframe/: output00000.tga
tests/gif/back/: output00000.tga
tests/gif/blue/: output00000.tga
tests/gif/cat-jump/: output00000.tga  output00001.tga  output00002.tga  output00003.tga  output00004.tga  output00005.tga  output00006.tga  output00007.tga  output00008.tga  output00009.tga  output00010.tga  output00011.tga  output00012.tga  output00013.tga  output00014.tga  output00015.tga  output00016.tga  output00017.tga  output00018.tga  output00019.tga  output00020.tga  output00021.tga  output00022.tga  output00023.tga  output00024.tga  output00025.tga  output00026.tga  output00027.tga  output00028.tga  output00029.tga  output00030.tga  output00031.tga  output00032.tga  output00033.tga  output00034.tga  output00035.tga  output00036.tga  output00037.tga  output00038.tga  output00039.tga  (+26 more)
tests/gif/comment/: output00000.tga
tests/gif/in-colormap-trans/: output00000.tga
tests/gif/one-color-offset/: output00000.tga
tests/gif/one-color-offset-ref/: output00000.tga
tests/gif/out-of-colormap-trans/: output00000.tga
tests/gif/red/: output00000.tga
tests/gif/small-background-size/: output00000.tga
tests/gif/small-background-size-2/: output00000.tga
tests/gif/small-background-size-2-ref/: output00000.tga
tests/gif/small-background-size-ref/: output00000.tga
tests/gif/text/: output00000.tga
tests/gif/tiletest/: output00000.tga
tests/gif/transparent-animation/: output00000.tga  output00001.tga  output00002.tga
tests/gif/transparent-animation-finalframe/: output00000.tga
tests/samples/: README.md
