[package]

name = "rust-media"
version = "0.1.0"
authors = ["The Servo Project Developers"]

build = "build.rs"

[lib]

name = "rust_media"
path = "lib.rs"

[dependencies.libvpx-sys]

git = "https://github.com/Gankro/libvpx"
branch = "patch-1"

[dependencies.libwebm-sys]

git = "https://github.com/Gankro/libwebm"
branch = "patch-1"

[dependencies.mp4v2-sys]

git = "https://github.com/Gankro/mp4v2"
branch = "patch-1"

[dependencies.ogg-sys]

git = "https://github.com/Gankro/ogg"
branch = "patch-1"

[dependencies.vorbis-sys]

git = "https://github.com/Gankro/vorbis"
branch = "patch-3"

[dependencies.giflib-sys]

git = "https://github.com/Gankro/giflib"
branch = "patch-1"

[dependencies]
byteorder = "0.3.0"

[target.x86_64-apple-darwin.dependencies.core_foundation]

git = "https://github.com/servo/rust-core-foundation"
rev = "928efbae42fc596e6ede2cf0949c3d6d6f3dad8f"

[features]

default = []

ffmpeg = []

