[package]

name = "rust-media"
version = "0.1.0"
authors = ["The Servo Project Developers"]

build = "build.rs"

[lib]

name = "rust_media"
path = "lib.rs"

[dependencies.libvpx-sys]

git = "https://github.com/pcwalton/libvpx"
branch = "servo"

[dependencies.libwebm-sys]

git = "https://github.com/pcwalton/libwebm"
branch = "servo"

[dependencies.mp4v2-sys]

git = "https://github.com/pcwalton/mp4v2"
branch = "servo"

[dependencies.ogg-sys]

git = "https://github.com/pcwalton/ogg"
branch = "servo"

[dependencies.lewton]

version = "0.4"
default-features = false
features = ["ieee754"]

[dependencies.giflib-sys]

git = "https://github.com/pcwalton/giflib"

[target.x86_64-apple-darwin.dependencies.core-foundation]

git = "https://github.com/servo/rust-core-foundation"

[dependencies]
num = "*"
num-derive = "*"
time = "*"
byteorder = "*"

[dev-dependencies]
hound = "2.0"
lewton = {version = "*", features = ["ogg"]}
ogg = "0.4"

[features]

default = []

ffmpeg = []

