[package]

name = "rust-media-example"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[[bin]]

name = "example"
path = "example.rs"

[dependencies.rust-media]

path = ".."
features = ["ffmpeg"]

[dependencies.clock_ticks]

git = "https://github.com/tomaka/clock_ticks.git"

[dependencies.sdl2]

git = "https://github.com/AngryLawyer/rust-sdl2"
rev = "a36627dff1069e5ca6098dd3a39fbd6039794097"

[dependencies.sdl2-sys]

git = "https://github.com/AngryLawyer/rust-sdl2"
rev = "a36627dff1069e5ca6098dd3a39fbd6039794097"
path = "sdl2-sys"

