[package]

name = "rust-media-example"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[[bin]]

name = "example"
path = "example.rs"

[dependencies.rust-media]

path = ".."
features = ["ffmpeg"]

[dependencies.sdl2]

git = "https://github.com/AngryLawyer/rust-sdl2"
rev = "62e08b3d4d0a043215165231cd093964260c4510"
